--- a/NFT preview card component/nft-preview-card-component-main/index.html
+++ b/NFT preview card component/nft-preview-card-component-main/index.html
@@ -3,31 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel = "stylesheet" href = "NFT.css"/>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | NFT preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
-<body>
 
-  Equilibrium #3429
+<body class="CouleurFond">
+  <main>
+    <div class="Card">
+      <div class="ImageContainer">
+        <img class = "EquilibriumImage"
+            src = "images/image-equilibrium.jpg"
+            alt = "Equilibrium product">
+      </div>
 
-  Our Equilibrium collection promotes balance and calm.
+      <div class="Texte">    
+        <h1 id="btn">Equilibrium #3429</h1>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+        <p class="Position"><span class="StyleTexte Alignement Epaisseur"><img src="images/icon-ethereum.svg" class="EcartImage">0.041 ETH</span> <span class="Alignement"><img src="images/icon-clock.svg" class="EcartImage"> 3 days left</span></p>
+        <hr class="CouleurTrait">
+        <p class="Alignement"><img src="images/image-avatar.png" class="AvatarImage EcartImage"> Creation of <span class="CouleurNom Espacement" id="btn"> Jules Wyvern </span></p>
+      </div> 
+    </div>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Aliho</a>.
+    </div>
+  </main>
 </body>
 </html>
