NFT preview card component

--- a/NFT preview card component/nft-preview-card-component-main/index.html
+++ b/NFT preview card component/nft-preview-card-component-main/index.html
@@ -24,9 +24,9 @@
       <div class="Texte">    
         <h1 id="btn">Equilibrium #3429</h1>
         <p>Our Equilibrium collection promotes balance and calm.</p>
-        <p class="Position"><span class="StyleTexte Alignement Epaisseur"><img src="images/icon-ethereum.svg" class="EcartImage">0.041 ETH</span> <span class="Alignement"><img src="images/icon-clock.svg" class="EcartImage"> 3 days left</span></p>
+        <p class="Position"><span class="StyleTexte Alignement Epaisseur"><img alt="Icone de l'ethereum" src="images/icon-ethereum.svg" class="EcartImage">0.041 ETH</span> <span class="Alignement"><img alt="Icone horloge" src="images/icon-clock.svg" class="EcartImage"> 3 days left</span></p>
         <hr class="CouleurTrait">
-        <p class="Alignement"><img src="images/image-avatar.png" class="AvatarImage EcartImage"> Creation of <span class="CouleurNom Espacement" id="btn"> Jules Wyvern </span></p>
+        <p class="Alignement"><img alt="Avatar de Jules Wyvern" src="images/image-avatar.png" class="AvatarImage EcartImage"> Creation of <span class="CouleurNom Espacement" id="btnJW"> Jules Wyvern </span></p>
       </div> 
     </div>
 
