--- a/Order summary component/order-summary-component-main/index.html
+++ b/Order summary component/order-summary-component-main/index.html
@@ -26,8 +26,8 @@
         </div>
 
         <div class="CadrePetit">
-          <img src="images/icon-music.svg" alt="Icon Music" class="ReductionIcone EcartImage"><p><span class="TexteGras EcartTexte">Annual Plan</span> <br> <span class="Texte EcartTexte"> $59.99/year</span></p>
-          <p class="PointeurTexte">Change</p>
+          <img src="images/icon-music.svg" alt="Icon Music" class="ReductionIcone EcartImage"><p><span class="TexteGras EcartTexte">Annual Plan</span> <br> <span class="Prix EcartTexte"> $59.99/year</span></p>
+          <p class="TexteChange">Change</p>
         </div>
 
         <button class="btn">Proceed to Payment</button>
@@ -38,7 +38,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Aliho</a>.
   </div>
 </body>
 </html>
